🐛 Fix data generator not working